Añadiendo bloques a los templates

--- a/templates/veterinaria/base.html
+++ b/templates/veterinaria/base.html
@@ -24,13 +24,13 @@
                   </li>
                   <!-- active" aria-current="page -->
                   <li class="nav-item">
-                    <a class="nav-link {% block clientes %}{% endblock %}" href="{% url 'clientes' %}">Clientes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link {% block mascotas %}{% endblock %}" href="{% url 'mascotas' %}">Mascotas</a>
+                    <a class="nav-link {% block fichas %}{% endblock %}" href="{% url 'fichas' %}">Fichas clinicas</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link {% block atenciones %}{% endblock %}" href="{% url 'atenciones' %}">Atenciones</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link {% block clientes %}{% endblock %}" href="{% url 'clientes' %}">Clientes</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link {% block razas %}{% endblock %}" href="{% url 'inicio' %}">Razas</a>
