--- a/templates/veterinaria/atencion.html
+++ b/templates/veterinaria/atencion.html
@@ -8,7 +8,7 @@
 <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
   <div class="container m-0 p-0">
     <h1>Atención</h1>
-    <form method="POST" action="{% url 'atencionEdit' atencion.id_atencion %}">
+    <form method="POST" action="{% url 'atencionEdit' atencion.id %}">
       {% csrf_token %}
       <div class="row">
         <div class="mb-3 col-6">
