--- a/templates/veterinaria/fichas.html
+++ b/templates/veterinaria/fichas.html
@@ -18,168 +18,41 @@
     <div class="container m-0 p-0">
       <h1 class="mt-3">Fichas clínicas</h1>
       <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary mb-5 mt-3 justify-content-end align-self-end" data-bs-toggle="modal" data-bs-target="#form_agregar_atencion">
+      <button type="button" class="btn btn-primary mb-5 mt-3 justify-content-end align-self-end" data-bs-toggle="modal">
         Crear nueva ficha
       </button>
 
-      <!-- Modal -->
-      <div class="modal fade" id="form_agregar_atencion" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="form_agregar_atencionLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="form_agregar_atencionLabel">Crear atención</h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form method="POST">
-                {% csrf_token %}
-                <div class="row">
-                  <div class="mb-3 col-6">
-                    {{ form.fecha_atencion.label_tag  }}
-                    {{ form.fecha_atencion }}
-                    {{ form.fecha_atencion.errors }}
-                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                  </div>
-                <div class="mb-3 col-3">
-                  {{ form.hora_ingreso.label_tag  }}
-                  {{ form.hora_ingreso }}
-                  {{ form.hora_ingreso.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3 col-3">
-                  {{ form.hora_termino.label_tag  }}
-                  {{ form.hora_termino }}
-                  {{ form.hora_termino.errors }}
-                </div>
-              </div>
-                <div class="mb-3">
-                  {{ form.id_ficha_clinica.label_tag  }}
-                  {{ form.id_ficha_clinica }}
-                  {{ form.id_ficha_clinica.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.agendada_por_asistente.label_tag  }}
-                  {{ form.agendada_por_asistente }}
-                  {{ form.agendada_por_asistente.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.id_veterinario.label_tag  }}
-                  {{ form.id_veterinario }}
-                  {{ form.id_veterinario.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.diagnostico.label_tag  }}
-                  {{ form.diagnostico }}
-                  {{ form.diagnostico.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.tratamiento.label_tag  }}
-                  {{ form.tratamiento }}
-                  {{ form.tratamiento.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-                <div class="mb-3">
-                  {{ form.observaciones.label_tag  }}
-                  {{ form.observaciones }}
-                  {{ form.observaciones.errors }}
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button type="submit" class="btn btn-primary">Crear atención</button>
-            </div>
-          </form>
-          </div>
-        </div>
-      </div>
-
-      <table class="table table-striped table-hover" id="atencionesTable">
+      <table class="table table-striped table-hover" id="fichasTable">
         <thead>
           <tr>
-            <th scope="col"><h4>Codigo</h4></th>
-            <th scope="col"><h4>Fecha</h4></th>
-            <th scope="col"><h4>Veterinario</h4></th>
-            <th scope="col"><h4>Hora</h4></th>
-            <th scope="col"><h4>Mascota</h4></th>
-            <th scope="col"></th>
+            <th scope="col"><h4>ID</h4></th>
+            <th scope="col"><h4>Nombre mascota</h4></th>
+            <th scope="col"><h4>Numero chip</h4></th>
+            <th scope="col"><h4>Edad (meses)</h4></th>
+            <th scope="col"><h4>Sexo</h4></th>
+            <th scope="col"><h4>Raza</h4></th>
+            <th scope="col"><h4>Dueño</h4></th>
           </tr>
         </thead>
         <tbody>
-            {% for atencion in atenciones %}
+            {% for ficha in fichas %}
             <tr class="align-middle">
-              <th scope="row">{{atencion.id_atencion}}</th>
-              <td>{{atencion.fecha_atencion}}</td>
-              <td class="text-capitalize">{{atencion.id_veterinario}}</td>
-              <td>
-                Inicio: {{atencion.hora_ingreso}}<br />
-                Termino: {{atencion.hora_termino}}
-              </td>
-              <td class="text-capitalize">{{atencion.id_ficha_clinica.id_mascota.nombres}}</td>
+              <th scope="row">{{ficha.id}}</th>
+              
               <td>
                 <div class="btn-group">
                   <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="dropdown" aria-expanded="false">
                     ⋮
                   </button>
                   <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" type="button" href="{% url 'verAtencion' atencion.id_atencion %}" >Editar Atención</a></li>
+                    <li><a class="dropdown-item" type="button" href="{% url 'verFicha' ficha.id %}" >Editar Atención</a></li>
                     <li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#atencion{{atencion.id_atencion}}">Ver Detalles</a></li>
                     <li><a class="dropdown-item" type="button" href="{% url 'atencionDel' atencion.id_atencion %}">Eliminar Atención</a></li>
                   </ul>
                 </div>
               </td>
             </tr>
-            <div class="modal fade" id="atencion{{atencion.id_atencion}}" tabindex="-1" aria-labelledby="ModalLabel{{atencion.id_atencion}}" aria-hidden="true">
-              <div class="modal-dialog modal-xl">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="ModalLabel{{atencion.id_atencion}}">Atención {{atencion.id_atencion}}</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-      
-                    <form>
-                      <div class="row">
-                        <div class="mb-3 col-6">
-                          Fecha: {{ atencion.fecha_atencion }}
-                          <!--{% if atencion.fecha_atencion < fecha_actual %} <span class="badge text-bg-secondary">Realizada</span>
-                          {% endif %}-->
-                        </div>
-                      <div class="mb-3 col-3">
-                        Hora Ingreso: {{ atencion.hora_ingreso }}
-                      </div>
-                      <div class="mb-3 col-3">
-                        Hora Termino: {{ atencion.hora_termino }}
-                      </div>
-                    </div>
-                      <div class="mb-3">                              
-                        Agendada por: <span class="text-capitalize">{{ atencion.agendada_por_asistente.nombres }} {{ atencion.agendada_por_asistente.apellidos }}</span>
-                      </div>
-                      <div class="mb-3">            
-                        Veterinario: <span class="text-capitalize">{{ atencion.id_veterinario.nombres }} {{ atencion.id_veterinario.apellidos }}</span>
-                      </div>
-                      <div class="mb-3">
-                        Diagnostico: {{ atencion.diagnostico }}                    
-                      </div>
-                      <div class="mb-3">                              
-                        Tratamiento: {{ atencion.tratamiento }}                                                        
-                      </div>
-                      <div class="mb-3">                              
-                        Observaciones: {{ atencion.observaciones }}                              
-                      </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Ver Detalles Mascota</button>
-                  </div>
-                </form>
-                  </div>
-                </div>
-              </div>
-            </div>                  
+                           
             {% endfor %}
         </tbody>
       </table>
