Agregando modulo razas

--- a/templates/veterinaria/base.html
+++ b/templates/veterinaria/base.html
@@ -33,7 +33,7 @@
                     <a class="nav-link {% block clientes %}{% endblock %}" href="{% url 'clientes' %}">Clientes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link {% block razas %}{% endblock %}" href="{% url 'inicio' %}">Razas</a>
+                    <a class="nav-link {% block razas %}{% endblock %}" href="{% url 'razas' %}">Razas</a>
                   </li>
                 </ul>
               </div>
