--- a/templates/veterinaria/especies.html
+++ b/templates/veterinaria/especies.html
@@ -1,21 +1,125 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends "veterinaria/base.html" %}
+{% load static %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+{% block titulo %}Catálogo razas{% endblock %}
 
-    <title>Catálogo especies</title>
-  </head>
-  <body data-bs-theme="dark">
-    
+{% block scripts %}
+<script src="{% static 'js/jquery-3.7.0.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap5.min.css' %}">
+<script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'js/dataTables.bootstrap5.min.js' %}"></script>
+<script>$(document).ready( function () {$('#razasTable').DataTable();} );</script>
+{% endblock %}
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% block razas %}active" aria-current="page{% endblock %}
+
+{% block contenido %}    
+<div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
+  <div class="container m-2 p-0">
+    <h1>Razas</h1>
+    <br>
+    <div class="mb-3">
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#form_agregar_raza">
+        ➕ Nueva Raza
+      </button>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="form_agregar_raza" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="form_agregar_razaLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="form_agregar_razaLabel">Registro raza</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form method="POST">
+              {% csrf_token %}
+              <div class="input-group mb-3">
+                <span class="input-group-text">{{ form.nombre_raza.label_tag }}</span>
+                {{ form.nombre_raza }}
+                {{ form.nombre_raza.errors }}
+              </div>
+              <div class="mb-3">
+                <div class="input-group mb-3">
+                  <span class="input-group-text">{{ form.nombre_especie.label_tag }}</span>
+                  {{ form.nombre_especie }}
+                  {{ form.nombre_especie.errors }}
+
+                </div>
+                <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+              </div>                  
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <button type="submit" class="btn btn-primary">Registrar raza</button>
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
+  
+    <table class="table table-striped table-hover" id="razasTable">
+      <thead>
+        <tr>
+          <th scope="col"><h4>ID</h4></th>
+          <th scope="col"><h4>Especie</h4></th>
+          <th scope="col"><h4>Raza</h4></th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+          {% for raza in razas %}
+          <tr class="align-middle">
+            <th scope="row">{{raza.id}}</th>
+            <td class="text-capitalize">{{raza.nombre_especie}}</td>
+            <td class="text-capitalize">{{raza.nombre_raza}}</td>
+            <td>
+              <div class="btn-group">
+                <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="dropdown" aria-expanded="false">
+                  ⋮
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                  <li><a class="dropdown-item" type="button" href="" >Editar Datos Raza</a></li>
+                  <li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#raza{{raza.id}}">Ver Mascotas de esta raza</a></li>
+                  <li><a class="dropdown-item" type="button" href="">Eliminar Raza</a></li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+          <div class="modal fade" id="raza{{raza.id}}" tabindex="-1" aria-labelledby="ModalLabel{{raza.id}}" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="ModalLabel{{raza.id}}">Mascotas de raza {{raza.nombre_raza}} <span class="fw-lighter">({{raza.nombre_especie}}</span>)</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                {% for mascota in mascotas %}
+                {% if mascota.id_raza == raza.id %}
+                <div class="modal-body">
+                  <div class="card" style="width: 18rem;">
+                    <img src="../../{{mascota.url_imagen}}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title text-capitalize">{{mascota.nombre_mascota}}</h5>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">{{mascota.edad_meses}} meses - {% if mascota.sexo %}Macho{% else %}Hembra{% endif %}</h6>
+                      <p class="card-text text-capitalize">{{mascota.num_chip}}</p>
+                      <a href="#" class="btn btn-primary">Detalles mascota</a>
+                    </div>
+                  </div>
+                </div>
+                {% else %}
+                <div class="modal-body">
+                  <p>No hay mascotas registradas de esta raza</p>
+                </div>
+                {% endif %}
+                {% endfor %}
+              </div>
+            </div>
+          </div>                  
+          {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
+{% endblock %}
