--- a/templates/veterinaria/fichas_clinicas.html
+++ b/templates/veterinaria/fichas_clinicas.html
@@ -17,10 +17,76 @@
 <div class="ms-auto col-xl-11 col-md-10 col-12 ps-5 mt-md-0 mt-5 pt-md-0 pt-3">
     <div class="container m-0 p-0">
       <h1 class="mt-3">Fichas clínicas</h1>
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-primary mb-5 mt-3 justify-content-end align-self-end" data-bs-toggle="modal">
-        Crear nueva ficha
-      </button>
+      <br>
+      <div class="mb-3">
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#form_agregar_ficha">
+          ➕ Crear nueva ficha
+        </button>
+      </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="form_agregar_ficha" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="form_agregar_fichaLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="form_agregar_fichaLabel">Creación de Ficha Clínica</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="input-group mb-3">
+                  <span class="input-group-text">{{ form.nombre_mascota.label_tag }}</span>
+                  {{ form.nombre_mascota }}
+                  {{ form.nombre_mascota.errors }}
+                </div>
+
+                <div class="mb-3">
+                  <div class="input-group mb-3">
+                    <span class="input-group-text">{{ form.num_chip.label_tag }}</span>
+                    {{ form.num_chip }}
+                    {{ form.num_chip.errors }}
+
+                  </div>
+                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+
+                <div class="mb-3">
+                  <div class="input-group mb-3">
+                    <span class="input-group-text">{{ form.edad_meses.label_tag }}</span>
+                    {{ form.edad_meses }}
+                    {{ form.edad_meses.errors }}
+
+                  </div>
+                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+
+                <div class="mb-3">
+                  <div class="input-group mb-3">
+                    <span class="input-group-text">{{ form.sexo.label_tag }}</span>
+                    {{ form.sexo }}
+                    {{ form.sexo.errors }}
+                  </div>
+                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+
+                <div class="mb-3">
+                  <div class="input-group mb-3">
+                    {{ form.imagen }}
+                    {{ form.imagen.errors }}
+                  </div>
+                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              <button type="submit" class="btn btn-primary">Crear ficha</button>
+            </div>
+          </form>
+          </div>
+        </div>
+      </div>
 
       <table class="table table-striped table-hover" id="fichasTable">
         <thead>
@@ -52,9 +118,9 @@
                     ⋮
                   </button>
                   <ul class="dropdown-menu dropdown-menu-end">
-                    <li><a class="dropdown-item" type="button" href="{% url 'verFicha' ficha.id %}" >Editar Atención</a></li>
-                    <li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#atencion{{atencion.id_atencion}}">Ver Detalles</a></li>
-                    <li><a class="dropdown-item" type="button" href="{% url 'fichaDel' ficha.id %}">Eliminar Atención</a></li>
+                    <li><a class="dropdown-item" type="button" href="{% url 'verFicha' ficha.id %}" >Editar Ficha</a></li>
+                    <li><a class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="">Ver Detalles</a></li>
+                    <li><a class="dropdown-item" type="button" href="{% url 'fichaDel' ficha.id %}">Eliminar Ficha</a></li>
                   </ul>
                 </div>
               </td>
